tests/fixtures/invalid/str_bitand_dict.py
# Cannot bitwise AND Str and Dict[str, int]
x: str = "hello" & {"a": 1}
